<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:id="@+id/notification_iv_album"
        android:src="@drawable/album"
        android:contentDescription="@string/label_notification_cover"
        android:layout_marginStart="2dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notification_show_layout"
        android:layout_toEndOf="@id/notification_iv_album"
        android:layout_centerVertical="true">

        <!--ellipsize: 文本超过限制则...显示-->
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/notification_top_song"
            android:text="@string/label_default_title"
            android:textSize="14sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_marginStart="12dp"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/notification_top_singer"
            android:text="@string/label_default_artist"
            android:textColor="@color/colorRelativeGrey"
            android:textSize="12sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/notification_top_song"
            android:layout_alignStart="@id/notification_top_song" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:id="@+id/notification_bottom_layout"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:layout_toEndOf="@id/notification_show_layout"

        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/notification_iv_love"
            android:layout_width="36dp"
            android:layout_height="42dp"
            android:layout_weight="0.8"
            android:padding="7dp"
            android:src="@drawable/love"
            android:contentDescription="@string/label_notification_love"
            android:background="?android:selectableItemBackground" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:id="@+id/notification_iv_play"
            android:src="@drawable/ic_baseline_play_circle_outline_24"
            android:contentDescription="@string/label_notification_toggle"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:padding="3dp"
            android:background="?android:selectableItemBackground"
            app:tint="@color/colorBlack" />

        <ImageView
            android:id="@+id/notification_iv_right"
            android:layout_width="36dp"
            android:layout_height="42dp"
            android:padding="8dp"
            android:src="@drawable/ic_next"
            android:contentDescription="@string/label_notification_next"
            android:layout_weight="0.8"
            android:background="?android:selectableItemBackground"/>

        <ImageView
            android:layout_width="36dp"
            android:layout_height="42dp"
            android:id="@+id/notification_iv_close"
            android:src="@drawable/close"
            android:padding="10dp"
            android:layout_weight="0.6"
            android:contentDescription="@string/label_notification_close"
            android:background="?android:selectableItemBackground"/>
    </LinearLayout>

</RelativeLayout>
